# C-language-programs

./: .gitmodules
Glib_plugin/: CMakeLists.txt
Glib_plugin/sources/: CMakeLists.txt  a.out  main.c
HW1_zipJPG/: .gitignore  a.out  adasd  main.c  main2.c  run_me.sh
OpenGL_cube/sources/: CMakeLists.txt  cube.c  cube.h  main.c
OpenGL_spinning_cube/: CMakeLists.txt
OpenGL_spinning_cube/sources/: CMakeLists.txt  main.c
assembler_reconstruct/: CMakeLists.txt  main.c
assembler_reconstruct/initial_data/: asm-prog
database/: CMakeLists.txt  testdb.db
database/sources/: CMakeLists.txt  db.c  db.h  main.c  misc.h  testdb.db
deamons/: CMakeLists.txt
deamons/settings/: settings.jzon
deamons/sources/main/: CMakeLists.txt  a.out  asdfv  deamon_magic.c  deamon_magic.h  deamonize.c  deamonize.h  jzon.c  jzon.h  main.c  nohup.out  parse_settings.c  parse_settings.h  settings.jzon
deamons/test_dir/: .gitignore  settings.jzon
degub_logger/: CMakeLists.txt  a.out  dede  gegege  main.c
degub_logger/sources/: CMakeLists.txt  debug_logger.c  debug_logger.h  main.c
desassemble/: .gdb_history
encoding/: 11111  Makefile  a.out  chars_table.c  chars_table.h  cp1251_to_utf8.txt  includes.h  koi8.txt  koi8_test.txt  main.c  multichar.c  multichar.h  runme.sh  test0  utf8.txt
encoding/sources/: chars_table.h  main.c
encoding/test_files/: utf8.txt
find_leak/: fix_leak1.path  fix_leak1v4.path
hash_table/: .gitignore  2  CMakeLists.txt  a.out  hash_f.c  hash_f.h  how_to  main.c  misc.c  misc.h  outs  run  txt  vm.txt
hash_table/_misc/: BSD_strings.c
hash_table/misc/: how_to
hash_table/sources/: format.sh
hash_table/sources/main/: CMakeLists.txt  main.c
hash_table/sources/side/: BSD_strings.c  CMakeLists.txt  hash_f.c  hash_f.h  misc.c  misc.h  spookyhash_api.h
hash_table/test/: app_complete.out  txt
http_server_iouring/: .gitignore  CMakeLists.txt  init.vim
http_server_iouring/sources/111/: main.c
http_server_iouring/sources/contrib/: CMakeLists.txt
http_server_iouring/sources/main/: CMakeLists.txt  a.out  buf&files.c  buf&files.h  bufandfiles.c  bufandfiles.h  connection_handlers.c  connection_handlers.h  even_loop.c  even_loop.h  event_loop.c  event_loop.h  http_resp.c  http_resp.h  liburing.h  main.c  misc.c  misc.h  picohttpparser.c  picohttpparser.h  response_parser.c  response_parser.h  setup.c  setup.h
http_server_iouring/test/: .gitignore
misc/: .zshrc  coc-settings.json  init.vim
misc/data_structs/: a.out  main.c
misc/generic/: a.out  main.c
misc/get_hostname-IP/: main.c
misc/gnu/: a.out  main.c
misc/jumps/: a.out  main.c
misc/macro/: a.out  main.c
misc/server/: a.out  main.c
misc/spooky/: a.out  main.c  run.sh
misc/syslog/: a.out  main.c
misc/test/: .gdb_history  a.out  main.c
misc/test_dec/: a.out  main.c
misc/test_incaps/: a.out  main.c  some.c  some.h
misc/testkhash/: CMakeLists.txt
misc/testkhash/sources/main/: CMakeLists.txt  main.c  main.cINT
misc/threads/: a.out  main.c
mmap_crc32/: CMakeLists.txt
mmap_crc32/sources/main/: CMakeLists.txt  crc32.h  main.c  mapping.c  mapping.h
mmap_crc32/test_dir/: .gitignore  app.out  cmd  testfile
telnet-service/: CMakeLists.txt
telnet-service/sources/main/: CMakeLists.txt  a.out  main.c  main22.c
threads_log_parser/: CMakeLists.txt
threads_log_parser/sources/main/: CMakeLists.txt  a.out  files.c  files.h  khash.h  khash_setup.c  khash_setup.h  main.c  misc.c  misc.h  misc_ref.h  string_parse.c  string_parse.h  test.c  test.h  test.txt  test.txt2  test2.txt  test3.txt  thrd_store.c  thrd_store.h
threads_log_parser/test/: access0.txt  access2.txt  app.out
threads_log_parser/test/aaa/: access1.txt  accessx.txt
threads_log_parser/test/sources/main/: Makefile  cmake_install.cmake
weather_looker/: .gitmodules  CMakeLists.txt
weather_looker/sources/main/: CMakeLists.txt  main.c
